<resources>
    <string name="app_name">camerabuilder</string>
    <string name="where_cams_find_their_match">Where cams find their match</string>
    <string name="sign_in_to_help_match_them">Sign In to help match them</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_for_an_account"><u>SIGN UP FOR AN ACCOUNT</u></string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="find_your_cam">Find your cam</string>
    <string name="lenses">Lenses</string>
    <string name="flash_it">FLash it</string>
    <string name="adapters">Adapters</string>
    <string name="my_bag">My Bag</string>
    <string name="name">Name</string>
    <string name="name_bold">Name:</string>
    <string name="brand">Brand:</string>
    <string name="brand_form">Brand</string>
    <string name="mount">Mount:</string>
    <string name="mount_form">Mount</string>
    <string name="type">Type:</string>
    <string name="type_form">Type</string>
    <string name="build_your_kit">Build your kit</string>
    <string name="cameras">Cameras</string>
    <string name="flashes">Flashes</string>
    <string name="compatible_mount">Compatible mount:</string>
    <string name="compatibe_cam_mount">Camera mount:</string>
    <string name="copatibe_lens_mount">Lens mount:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="full_specifications">Full specifications</string>
    <string name="copat">Compatible Camera Mount</string>
    <string name="com_cam">Compatible camera mount</string>
    <string name="cop_lens">Compatible lens mount</string>
    <string name="clear">Clear</string>
    <string name="please_choose_a_camera">Please choose a camera</string>
    <string name="please_choose_a_flash">Please choose a flash</string>
    <string name="create_new_kit">Create new kit</string>
    <string name="choose_item">Choose Item</string>
    <string name="scx">Please choose a lens</string>
    <string name="save">Save</string>
    <string name="note_maximum_8_items_are_shown_if_you_want_to_view_all_press_on_item">Note: maximum 8 items are shown if you want to view all press on item</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_mut_contain_at_least_8_characters_with_upper_case_and_special_characters">Password must contain at least 8 and at most 20 characters with upper case and special characters</string>
    <string name="required">Required</string>
</resources>
