<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackathon.camerabuilder.ui.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where_cams_find_their_match"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="#81c784"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_help_match_them"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#c5cfd4"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAllCaps="true"
            app:fontFamily="sans-serif-light"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textEmailAddress"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAllCaps="true"
            app:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="20dp"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_for_an_account"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
</layout>