<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hackathon.camerabuilder.ui.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Register"
            app:titleTextColor="#ffffff"
            app:navigationIcon="@drawable/ic_back"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/appbar"
        android:padding="40dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAllCaps="true"
            app:fontFamily="sans-serif-light"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invalid_email"
            android:textSize="11sp"
            android:visibility="gone"
            android:textColor="@color/colorAccent"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAllCaps="true"
            app:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textPersonName"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:visibility="gone"
            android:text="@string/password_mut_contain_at_least_8_characters_with_upper_case_and_special_characters"
            android:textColor="@color/colorAccent"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAllCaps="true"
            app:fontFamily="sans-serif-light"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:visibility="gone"
            android:text="@string/password_mut_contain_at_least_8_characters_with_upper_case_and_special_characters"
            android:textColor="@color/colorAccent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="20dp"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:onClick="register"
            android:enabled="false"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>
</layout>
